*8336* Fixed stage participants cutoff issue

--- a/styles/structure/foot.less
+++ b/styles/structure/foot.less
@@ -11,11 +11,15 @@
  */
 
 .pkp_structure_foot {
+	border-top: 1px dotted #999;
 	clear: both;
 	min-height: 150px;
 	background-color: #A2C6DC;
 	font-color: #ffffff;
-	position: relative;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
 	h4 {
 		color: #000000;
 	}
